--- a/styles/main.css
+++ b/styles/main.css
@@ -54,4 +54,14 @@ body {
     html { font-size: 120%; }
 }
 
+.clearfix::before,
+.clearfix::after {
+    content: "";
+    display: table;
+}
+
+.cleafix::after {
+    clear: both;
+}
+
 
